<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="12dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_place"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/moved_to_place" />

        <RadioButton
            android:id="@+id/rb_user"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/assigned_to_user"/>

    </RadioGroup>

    <EditText
        android:id="@+id/et_user_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/cancel"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/send"/>

    </LinearLayout>


</LinearLayout>